--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>Akalin</title>
+  <title>Akalin-Resonator</title>
   <link rel="stylesheet" href="assets/css/base.css">
 </head>
 <body>
